added a method to set focus on textarea

--- a/VirtualAddingMachine/VirtualAddingMachine/Client/wwwroot/index.html
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="VirtualAddingMachine.Client.styles.css" rel="stylesheet" />
+    <script src="jsUtility.js"></script>
 </head>
 
 <body>
