--- a/VirtualAddingMachine/VirtualAddingMachine/Client/wwwroot/index.html
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/wwwroot/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="shortcut icon" href="Images/calc.png" id="favicon">
     <title>VirtualAddingMachine</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
